--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+
     implementation 'com.iceteck.silicompressorr:silicompressor:2.0'
     implementation 'com.firebaseui:firebase-ui-storage:1.2.0'
-
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
+    implementation 'com.iceteck.silicompressorr:silicompressor:2.0'
+    implementation 'id.zelory:compressor:2.0.0'
 }
